--- a/SapinesPolicyAndBillingTest/src/main/java/com/adaptikPolicyAndBilling/qa/config/config.properties
+++ b/SapinesPolicyAndBillingTest/src/main/java/com/adaptikPolicyAndBilling/qa/config/config.properties
@@ -1,6 +1,6 @@
 ###########Gloabal Properties##############
 url https://ohihlxqadweb001.adaptik.net/AdaptikBilling/BillingEntryPoint?pageCode=BILLING_LAUNCH&theme=adaptik-light&appMode=standalone&app=Select
-browser Chrome
+browser headless
 
 #########Login Page####################
 username nissars
