--- a/SapinesPolicyAndBillingTest/pom.xml
+++ b/SapinesPolicyAndBillingTest/pom.xml
@@ -95,6 +95,12 @@
     <version>2.17.2</version>
 </dependency>
 		
+<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/htmlunit-driver -->
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>htmlunit-driver</artifactId>
+    <version>3.58.0</version>
+</dependency>
 		
 	
   </dependencies>
